--- a/index.html
+++ b/index.html
@@ -33,53 +33,6 @@
         </tbody>
     </table>
 
-    <script>
-        async function fetchLeaderboard() {
-            const response = await fetch('https://europe-west2-g3casino.cloudfunctions.net/user/affiliate/referral-leaderboard', {
-                headers: {
-                    'Authorization': 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1aWQiOiI1a1V0ZzFPTWV0SzhvZkFvRTFteiIsImlhdCI6MTcyMzExMzQ3MH0.GpTH9ix0WrKeWOh7B__wQEwRrzzeaNZkUSMU4wamBiA'
-                }
-            });
-            const data = await response.json();
-            return data;
-        }
-
-        function displayLeaderboard(leaderboardData) {
-            const leaderboardBody = document.getElementById('leaderboard-body');
-            leaderboardBody.innerHTML = '';
-
-            if (leaderboardData && leaderboardData.success) {
-                const players = leaderboardData.data.players;
-                players.forEach((player, index) => {
-                    const row = document.createElement('tr');
-                    row.innerHTML = `
-                        <td>${index + 1}</td>
-                        <td>${player.username}</td>
-                        <td>${player.points}</td>
-                    `;
-                    leaderboardBody.appendChild(row);
-                });
-            } else {
-                leaderboardBody.innerHTML = '<tr><td colspan="3">Failed to fetch the leaderboard.</td></tr>';
-            }
-        }
-
-        async function updateLeaderboard() {
-            try {
-                const leaderboardData = await fetchLeaderboard();
-                displayLeaderboard(leaderboardData);
-            } catch (error) {
-                console.error('Error fetching leaderboard:', error);
-                document.getElementById('leaderboard-body').innerHTML = '<tr><td colspan="3">An error occurred while fetching the leaderboard.</td></tr>';
-            }
-        }
-      
-
-        // Update the leaderboard when the page loads
-        updateLeaderboard();
-
-        // Update the leaderboard every 5 minutes
-        setInterval(updateLeaderboard, 5 * 60 * 1000);
-    </script>
+    <script src="leaderboard.js"></script>
 </body>
 </html>
